syntax = "proto3";

package com.ben.smartcv.common;

option java_package = "com.ben.smartcv.common.job";
option java_outer_classname = "JobEventProto";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

message JobCreatedEvent {

    string organization_name = 1;

    string position = 2;

    double from_salary = 3;

    double to_salary = 4;

    google.protobuf.Timestamp expired_at = 5;

    string requirements = 6;

    string created_by = 7;

}

message JobDeletedEvent {

    string job_id = 1;

}