syntax = "proto3";

package com.ben.smartcv.common;

option java_package = "com.ben.smartcv.common.notification";
option java_outer_classname = "NotificationEventProto";
option java_multiple_files = true;

message NotificationSentEvent {

    string title = 1;

    string content = 2;

    string locale = 3;

}

message ApprovalMailSentEvent {

    string title = 1;

    string content = 2;

    string locale = 3;

    string receiver_id = 4;

    string job_id = 5;

}